Fix address alignment

--- a/wp-content/themes/glo/assets/less/sections/about.less
+++ b/wp-content/themes/glo/assets/less/sections/about.less
@@ -45,6 +45,7 @@
     .america-outline {
       display: flex;
       justify-content: center;
+      margin: 0 0 30px;
     }
     h3 {
       color: #999;
